Added filter to remove relationships that don't belong together. #3

--- a/NLP Python Jupyter Notebooks/Merge results by sentence index number/Merge results by sentence index number.ipynb
+++ b/NLP Python Jupyter Notebooks/Merge results by sentence index number/Merge results by sentence index number.ipynb
@@ -593,6 +593,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Section 10', 'vessel', 'length', 'metre'),\n",
+       " ('Section 10', 'vessel', 'overall length', 'metre'),\n",
+       " ('Section 12', 'pipe', 'least', 'metre'),\n",
+       " ('Section 15', 'vessel', 'length', 'metre'),\n",
+       " ('Section 15', 'vessel', 'overall length', 'metre'),\n",
+       " ('Section 16', 'vessel', 'length', 'metre'),\n",
+       " ('Section 16', 'vessel', 'overall length', 'metre'),\n",
+       " ('Section 23', 'vessel', 'length', 'metre'),\n",
+       " ('Section 23', 'vessel', 'overall length', 'metre'),\n",
+       " ('Section 24', 'vessel', 'length', 'metre'),\n",
+       " ('Section 24', 'vessel', 'least', 'metre'),\n",
+       " ('Section 24', 'vessel', 'overall length', 'metre')]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove word relationships that don't belong together\n",
+    "\n",
+    "data_property_and_data_type_that_dont_belong_together = ['length-voltage','overall length-voltage']\n",
+    "\n",
+    "final_lines_for_csv_file = []\n",
+    "\n",
+    "for (section,word_as_string,data_property,data_type) in lines_for_csv_file:\n",
+    "    \n",
+    "    check_string = data_property + \"-\" + data_type\n",
+    "    \n",
+    "    if check_string not in data_property_and_data_type_that_dont_belong_together:\n",
+    "        final_lines_for_csv_file.append((section,word_as_string,data_property,data_type))\n",
+    "    \n",
+    "final_lines_for_csv_file"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
