--- a/NLP Python Jupyter Notebooks/Merge results by sentence index number/Merge results by sentence index number.ipynb
+++ b/NLP Python Jupyter Notebooks/Merge results by sentence index number/Merge results by sentence index number.ipynb
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +645,7 @@
     "\n",
     "with open(\"output - Merge results by sentence index number.csv\", 'w') as f:\n",
     "    write = csv.writer(f, delimiter=',', lineterminator='\\n')\n",
-    "    write.writerows(lines_for_csv_file)"
+    "    write.writerows(final_lines_for_csv_file)"
    ]
   }
  ],
