Fixed a bug that gave wrong result. #10

--- a/NLP Python Jupyter Notebooks/Get sentence type from chapter text/Get sentence type from chapter text.ipynb
+++ b/NLP Python Jupyter Notebooks/Get sentence type from chapter text/Get sentence type from chapter text.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 3
     }
    ],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -107,11 +107,8 @@
        " ('1', 'none'),\n",
        " ('2', 'headline-section'),\n",
        " ('3', 'part'),\n",
-       " ('3', 'none'),\n",
        " ('4', 'part'),\n",
-       " ('4', 'none'),\n",
        " ('5', 'part'),\n",
-       " ('5', 'none'),\n",
        " ('6', 'none'),\n",
        " ('7', 'none'),\n",
        " ('8', 'none'),\n",
@@ -119,15 +116,11 @@
        " ('10', 'none'),\n",
        " ('11', 'headline-section'),\n",
        " ('12', 'part'),\n",
-       " ('12', 'none'),\n",
        " ('13', 'part'),\n",
-       " ('13', 'none'),\n",
        " ('14', 'part'),\n",
-       " ('14', 'none'),\n",
        " ('15', 'none'),\n",
        " ('16', 'headline-section'),\n",
        " ('17', 'part'),\n",
-       " ('17', 'none'),\n",
        " ('18', 'sub-part'),\n",
        " ('19', 'none'),\n",
        " ('20', 'sub-part'),\n",
@@ -135,102 +128,64 @@
        " ('22', 'sub-part'),\n",
        " ('23', 'none'),\n",
        " ('24', 'part'),\n",
-       " ('24', 'none'),\n",
        " ('25', 'sub-part'),\n",
        " ('26', 'none'),\n",
        " ('27', 'sub-part'),\n",
        " ('28', 'none'),\n",
        " ('29', 'part'),\n",
-       " ('29', 'none'),\n",
        " ('30', 'part'),\n",
-       " ('30', 'none'),\n",
        " ('31', 'part'),\n",
-       " ('31', 'none'),\n",
        " ('32', 'part'),\n",
-       " ('32', 'none'),\n",
        " ('33', 'part'),\n",
-       " ('33', 'none'),\n",
        " ('34', 'none'),\n",
        " ('35', 'headline-section'),\n",
        " ('36', 'part'),\n",
-       " ('36', 'none'),\n",
        " ('37', 'part'),\n",
-       " ('37', 'none'),\n",
        " ('38', 'part'),\n",
-       " ('38', 'none'),\n",
        " ('39', 'part'),\n",
-       " ('39', 'none'),\n",
        " ('40', 'part'),\n",
-       " ('40', 'none'),\n",
        " ('41', 'part'),\n",
-       " ('41', 'none'),\n",
        " ('42', 'part'),\n",
-       " ('42', 'none'),\n",
        " ('43', 'part'),\n",
-       " ('43', 'none'),\n",
        " ('44', 'part'),\n",
-       " ('44', 'none'),\n",
        " ('45', 'part'),\n",
-       " ('45', 'none'),\n",
        " ('46', 'none'),\n",
        " ('47', 'headline-section'),\n",
        " ('48', 'part'),\n",
-       " ('48', 'none'),\n",
        " ('49', 'part'),\n",
-       " ('49', 'none'),\n",
        " ('50', 'none'),\n",
        " ('51', 'headline-section'),\n",
        " ('52', 'part'),\n",
-       " ('52', 'none'),\n",
        " ('53', 'part'),\n",
-       " ('53', 'none'),\n",
        " ('54', 'part'),\n",
-       " ('54', 'none'),\n",
        " ('55', 'part'),\n",
-       " ('55', 'none'),\n",
        " ('56', 'part'),\n",
-       " ('56', 'none'),\n",
        " ('57', 'none'),\n",
        " ('58', 'headline-section'),\n",
        " ('59', 'none'),\n",
        " ('60', 'none'),\n",
        " ('61', 'headline-section'),\n",
        " ('62', 'part'),\n",
-       " ('62', 'none'),\n",
        " ('63', 'part'),\n",
-       " ('63', 'none'),\n",
        " ('64', 'part'),\n",
-       " ('64', 'none'),\n",
        " ('65', 'part'),\n",
-       " ('65', 'none'),\n",
        " ('66', 'none'),\n",
        " ('67', 'headline-section'),\n",
        " ('68', 'part'),\n",
-       " ('68', 'none'),\n",
        " ('69', 'part'),\n",
-       " ('69', 'none'),\n",
        " ('70', 'part'),\n",
-       " ('70', 'none'),\n",
        " ('71', 'part'),\n",
-       " ('71', 'none'),\n",
        " ('72', 'part'),\n",
-       " ('72', 'none'),\n",
        " ('73', 'none'),\n",
        " ('74', 'headline-section'),\n",
        " ('75', 'part'),\n",
-       " ('75', 'none'),\n",
        " ('76', 'part'),\n",
-       " ('76', 'none'),\n",
        " ('77', 'none'),\n",
        " ('78', 'headline-section'),\n",
        " ('79', 'part'),\n",
-       " ('79', 'none'),\n",
        " ('80', 'part'),\n",
-       " ('80', 'none'),\n",
        " ('81', 'part'),\n",
-       " ('81', 'none'),\n",
        " ('82', 'part'),\n",
-       " ('82', 'none'),\n",
        " ('83', 'none'),\n",
        " ('84', 'none'),\n",
        " ('85', 'none'),\n",
@@ -244,25 +199,19 @@
        " ('93', 'none'),\n",
        " ('94', 'headline-section'),\n",
        " ('95', 'part'),\n",
-       " ('95', 'none'),\n",
        " ('96', 'part'),\n",
-       " ('96', 'none'),\n",
        " ('97', 'part'),\n",
-       " ('97', 'none'),\n",
        " ('98', 'none'),\n",
        " ('99', 'headline-section'),\n",
        " ('100', 'part'),\n",
-       " ('100', 'none'),\n",
        " ('101', 'sub-part'),\n",
        " ('102', 'none'),\n",
        " ('103', 'sub-part'),\n",
        " ('104', 'none'),\n",
        " ('105', 'part'),\n",
-       " ('105', 'none'),\n",
        " ('106', 'none'),\n",
        " ('107', 'headline-section'),\n",
        " ('108', 'part'),\n",
-       " ('108', 'none'),\n",
        " ('109', 'sub-part'),\n",
        " ('110', 'none'),\n",
        " ('111', 'sub-part'),\n",
@@ -272,21 +221,15 @@
        " ('115', 'sub-part'),\n",
        " ('116', 'none'),\n",
        " ('117', 'part'),\n",
-       " ('117', 'none'),\n",
        " ('118', 'none'),\n",
        " ('119', 'headline-section'),\n",
        " ('120', 'part'),\n",
-       " ('120', 'none'),\n",
        " ('121', 'part'),\n",
-       " ('121', 'none'),\n",
        " ('122', 'part'),\n",
-       " ('122', 'none'),\n",
        " ('123', 'part'),\n",
-       " ('123', 'none'),\n",
        " ('124', 'none'),\n",
        " ('125', 'headline-section'),\n",
        " ('126', 'part'),\n",
-       " ('126', 'none'),\n",
        " ('127', 'sub-part'),\n",
        " ('128', 'none'),\n",
        " ('129', 'sub-part'),\n",
@@ -296,24 +239,20 @@
        " ('133', 'sub-part'),\n",
        " ('134', 'none'),\n",
        " ('135', 'part'),\n",
-       " ('135', 'none'),\n",
        " ('136', 'sub-part'),\n",
        " ('137', 'none'),\n",
        " ('138', 'sub-part'),\n",
        " ('139', 'none'),\n",
        " ('140', 'part'),\n",
-       " ('140', 'none'),\n",
        " ('141', 'part'),\n",
-       " ('141', 'none'),\n",
        " ('142', 'part'),\n",
-       " ('142', 'none'),\n",
        " ('143', 'none'),\n",
        " ('144', 'headline-section'),\n",
        " ('145', 'none')]"
       ]
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 4
     }
    ],
    "source": [
@@ -332,7 +271,7 @@
     "        #print(str(line_index_number) + ' - ' + sentence_type)\n",
     "        forward_result_to_csv.append((str(line_index_number),sentence_type))\n",
     "\n",
-    "    if sentence_word_count > 3 and word_tokens[0] == 'Section' and hasNumbers(word_tokens[1]) and word_tokens[2] == '.':\n",
+    "    elif sentence_word_count > 3 and word_tokens[0] == 'Section' and hasNumbers(word_tokens[1]) and word_tokens[2] == '.':\n",
     "        sentence_type = 'headline-section'\n",
     "        #print(str(line_index_number) + ' - ' + sentence_type)\n",
     "        forward_result_to_csv.append((str(line_index_number),sentence_type))\n",
@@ -357,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
