Extracting more data about the sentence type. #10

--- a/NLP Python Jupyter Notebooks/Get sentence type from chapter text/Get sentence type from chapter text.ipynb
+++ b/NLP Python Jupyter Notebooks/Get sentence type from chapter text/Get sentence type from chapter text.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -103,156 +103,156 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[('0', 'headline-chapter'),\n",
-       " ('1', 'none'),\n",
-       " ('2', 'headline-section'),\n",
-       " ('3', 'part'),\n",
-       " ('4', 'part'),\n",
-       " ('5', 'part'),\n",
-       " ('6', 'none'),\n",
-       " ('7', 'none'),\n",
-       " ('8', 'none'),\n",
-       " ('9', 'none'),\n",
-       " ('10', 'none'),\n",
-       " ('11', 'headline-section'),\n",
-       " ('12', 'part'),\n",
-       " ('13', 'part'),\n",
-       " ('14', 'part'),\n",
-       " ('15', 'none'),\n",
-       " ('16', 'headline-section'),\n",
-       " ('17', 'part'),\n",
-       " ('18', 'sub-part'),\n",
-       " ('19', 'none'),\n",
-       " ('20', 'sub-part'),\n",
-       " ('21', 'none'),\n",
-       " ('22', 'sub-part'),\n",
-       " ('23', 'none'),\n",
-       " ('24', 'part'),\n",
-       " ('25', 'sub-part'),\n",
-       " ('26', 'none'),\n",
-       " ('27', 'sub-part'),\n",
-       " ('28', 'none'),\n",
-       " ('29', 'part'),\n",
-       " ('30', 'part'),\n",
-       " ('31', 'part'),\n",
-       " ('32', 'part'),\n",
-       " ('33', 'part'),\n",
-       " ('34', 'none'),\n",
-       " ('35', 'headline-section'),\n",
-       " ('36', 'part'),\n",
-       " ('37', 'part'),\n",
-       " ('38', 'part'),\n",
-       " ('39', 'part'),\n",
-       " ('40', 'part'),\n",
-       " ('41', 'part'),\n",
-       " ('42', 'part'),\n",
-       " ('43', 'part'),\n",
-       " ('44', 'part'),\n",
-       " ('45', 'part'),\n",
-       " ('46', 'none'),\n",
-       " ('47', 'headline-section'),\n",
-       " ('48', 'part'),\n",
-       " ('49', 'part'),\n",
-       " ('50', 'none'),\n",
-       " ('51', 'headline-section'),\n",
-       " ('52', 'part'),\n",
-       " ('53', 'part'),\n",
-       " ('54', 'part'),\n",
-       " ('55', 'part'),\n",
-       " ('56', 'part'),\n",
-       " ('57', 'none'),\n",
-       " ('58', 'headline-section'),\n",
-       " ('59', 'none'),\n",
-       " ('60', 'none'),\n",
-       " ('61', 'headline-section'),\n",
-       " ('62', 'part'),\n",
-       " ('63', 'part'),\n",
-       " ('64', 'part'),\n",
-       " ('65', 'part'),\n",
-       " ('66', 'none'),\n",
-       " ('67', 'headline-section'),\n",
-       " ('68', 'part'),\n",
-       " ('69', 'part'),\n",
-       " ('70', 'part'),\n",
-       " ('71', 'part'),\n",
-       " ('72', 'part'),\n",
-       " ('73', 'none'),\n",
-       " ('74', 'headline-section'),\n",
-       " ('75', 'part'),\n",
-       " ('76', 'part'),\n",
-       " ('77', 'none'),\n",
-       " ('78', 'headline-section'),\n",
-       " ('79', 'part'),\n",
-       " ('80', 'part'),\n",
-       " ('81', 'part'),\n",
-       " ('82', 'part'),\n",
-       " ('83', 'none'),\n",
-       " ('84', 'none'),\n",
-       " ('85', 'none'),\n",
-       " ('86', 'none'),\n",
-       " ('87', 'none'),\n",
-       " ('88', 'headline-section'),\n",
-       " ('89', 'none'),\n",
-       " ('90', 'none'),\n",
-       " ('91', 'headline-section'),\n",
-       " ('92', 'none'),\n",
-       " ('93', 'none'),\n",
-       " ('94', 'headline-section'),\n",
-       " ('95', 'part'),\n",
-       " ('96', 'part'),\n",
-       " ('97', 'part'),\n",
-       " ('98', 'none'),\n",
-       " ('99', 'headline-section'),\n",
-       " ('100', 'part'),\n",
-       " ('101', 'sub-part'),\n",
-       " ('102', 'none'),\n",
-       " ('103', 'sub-part'),\n",
-       " ('104', 'none'),\n",
-       " ('105', 'part'),\n",
-       " ('106', 'none'),\n",
-       " ('107', 'headline-section'),\n",
-       " ('108', 'part'),\n",
-       " ('109', 'sub-part'),\n",
-       " ('110', 'none'),\n",
-       " ('111', 'sub-part'),\n",
-       " ('112', 'none'),\n",
-       " ('113', 'sub-part'),\n",
-       " ('114', 'none'),\n",
-       " ('115', 'sub-part'),\n",
-       " ('116', 'none'),\n",
-       " ('117', 'part'),\n",
-       " ('118', 'none'),\n",
-       " ('119', 'headline-section'),\n",
-       " ('120', 'part'),\n",
-       " ('121', 'part'),\n",
-       " ('122', 'part'),\n",
-       " ('123', 'part'),\n",
-       " ('124', 'none'),\n",
-       " ('125', 'headline-section'),\n",
-       " ('126', 'part'),\n",
-       " ('127', 'sub-part'),\n",
-       " ('128', 'none'),\n",
-       " ('129', 'sub-part'),\n",
-       " ('130', 'none'),\n",
-       " ('131', 'sub-part'),\n",
-       " ('132', 'none'),\n",
-       " ('133', 'sub-part'),\n",
-       " ('134', 'none'),\n",
-       " ('135', 'part'),\n",
-       " ('136', 'sub-part'),\n",
-       " ('137', 'none'),\n",
-       " ('138', 'sub-part'),\n",
-       " ('139', 'none'),\n",
-       " ('140', 'part'),\n",
-       " ('141', 'part'),\n",
-       " ('142', 'part'),\n",
-       " ('143', 'none'),\n",
-       " ('144', 'headline-section'),\n",
-       " ('145', 'none')]"
+       "[('0', 'headline-chapter', '3'),\n",
+       " ('1', 'none', 'none'),\n",
+       " ('2', 'headline-section', '7'),\n",
+       " ('3', 'part', '1'),\n",
+       " ('4', 'part', '2'),\n",
+       " ('5', 'part', '3'),\n",
+       " ('6', 'none', 'none'),\n",
+       " ('7', 'none', 'none'),\n",
+       " ('8', 'none', 'none'),\n",
+       " ('9', 'none', 'none'),\n",
+       " ('10', 'none', 'none'),\n",
+       " ('11', 'headline-section', '8'),\n",
+       " ('12', 'part', '1'),\n",
+       " ('13', 'part', '2'),\n",
+       " ('14', 'part', '3'),\n",
+       " ('15', 'none', 'none'),\n",
+       " ('16', 'headline-section', '9'),\n",
+       " ('17', 'part', '1'),\n",
+       " ('18', 'sub-part', 'a'),\n",
+       " ('19', 'none', 'none'),\n",
+       " ('20', 'sub-part', 'b'),\n",
+       " ('21', 'none', 'none'),\n",
+       " ('22', 'sub-part', 'c'),\n",
+       " ('23', 'none', 'none'),\n",
+       " ('24', 'part', '2'),\n",
+       " ('25', 'sub-part', 'a'),\n",
+       " ('26', 'none', 'none'),\n",
+       " ('27', 'sub-part', 'b'),\n",
+       " ('28', 'none', 'none'),\n",
+       " ('29', 'part', '3'),\n",
+       " ('30', 'part', '4'),\n",
+       " ('31', 'part', '5'),\n",
+       " ('32', 'part', '6'),\n",
+       " ('33', 'part', '7'),\n",
+       " ('34', 'none', 'none'),\n",
+       " ('35', 'headline-section', '10'),\n",
+       " ('36', 'part', '1'),\n",
+       " ('37', 'part', '2'),\n",
+       " ('38', 'part', '3'),\n",
+       " ('39', 'part', '4'),\n",
+       " ('40', 'part', '5'),\n",
+       " ('41', 'part', '6'),\n",
+       " ('42', 'part', '7'),\n",
+       " ('43', 'part', '8'),\n",
+       " ('44', 'part', '9'),\n",
+       " ('45', 'part', '10'),\n",
+       " ('46', 'none', 'none'),\n",
+       " ('47', 'headline-section', '11'),\n",
+       " ('48', 'part', '1'),\n",
+       " ('49', 'part', '2'),\n",
+       " ('50', 'none', 'none'),\n",
+       " ('51', 'headline-section', '12'),\n",
+       " ('52', 'part', '1'),\n",
+       " ('53', 'part', '2'),\n",
+       " ('54', 'part', '3'),\n",
+       " ('55', 'part', '4'),\n",
+       " ('56', 'part', '5'),\n",
+       " ('57', 'none', 'none'),\n",
+       " ('58', 'headline-section', '13'),\n",
+       " ('59', 'none', 'none'),\n",
+       " ('60', 'none', 'none'),\n",
+       " ('61', 'headline-section', '14'),\n",
+       " ('62', 'part', '1'),\n",
+       " ('63', 'part', '2'),\n",
+       " ('64', 'part', '3'),\n",
+       " ('65', 'part', '4'),\n",
+       " ('66', 'none', 'none'),\n",
+       " ('67', 'headline-section', '15'),\n",
+       " ('68', 'part', '1'),\n",
+       " ('69', 'part', '2'),\n",
+       " ('70', 'part', '3'),\n",
+       " ('71', 'part', '4'),\n",
+       " ('72', 'part', '5'),\n",
+       " ('73', 'none', 'none'),\n",
+       " ('74', 'headline-section', '16'),\n",
+       " ('75', 'part', '1'),\n",
+       " ('76', 'part', '2'),\n",
+       " ('77', 'none', 'none'),\n",
+       " ('78', 'headline-section', '17'),\n",
+       " ('79', 'part', '1'),\n",
+       " ('80', 'part', '1'),\n",
+       " ('81', 'part', '3'),\n",
+       " ('82', 'part', '4'),\n",
+       " ('83', 'none', 'none'),\n",
+       " ('84', 'none', 'none'),\n",
+       " ('85', 'none', 'none'),\n",
+       " ('86', 'none', 'none'),\n",
+       " ('87', 'none', 'none'),\n",
+       " ('88', 'headline-section', '18'),\n",
+       " ('89', 'none', 'none'),\n",
+       " ('90', 'none', 'none'),\n",
+       " ('91', 'headline-section', '19'),\n",
+       " ('92', 'none', 'none'),\n",
+       " ('93', 'none', 'none'),\n",
+       " ('94', 'headline-section', '20'),\n",
+       " ('95', 'part', '1'),\n",
+       " ('96', 'part', '2'),\n",
+       " ('97', 'part', '3'),\n",
+       " ('98', 'none', 'none'),\n",
+       " ('99', 'headline-section', '21'),\n",
+       " ('100', 'part', '1'),\n",
+       " ('101', 'sub-part', 'a'),\n",
+       " ('102', 'none', 'none'),\n",
+       " ('103', 'sub-part', 'b'),\n",
+       " ('104', 'none', 'none'),\n",
+       " ('105', 'part', '2'),\n",
+       " ('106', 'none', 'none'),\n",
+       " ('107', 'headline-section', '22'),\n",
+       " ('108', 'part', '1'),\n",
+       " ('109', 'sub-part', 'a'),\n",
+       " ('110', 'none', 'none'),\n",
+       " ('111', 'sub-part', 'b'),\n",
+       " ('112', 'none', 'none'),\n",
+       " ('113', 'sub-part', 'c'),\n",
+       " ('114', 'none', 'none'),\n",
+       " ('115', 'sub-part', 'd'),\n",
+       " ('116', 'none', 'none'),\n",
+       " ('117', 'part', '2'),\n",
+       " ('118', 'none', 'none'),\n",
+       " ('119', 'headline-section', '23'),\n",
+       " ('120', 'part', '1'),\n",
+       " ('121', 'part', '2'),\n",
+       " ('122', 'part', '3'),\n",
+       " ('123', 'part', '4'),\n",
+       " ('124', 'none', 'none'),\n",
+       " ('125', 'headline-section', '24'),\n",
+       " ('126', 'part', '1'),\n",
+       " ('127', 'sub-part', 'a'),\n",
+       " ('128', 'none', 'none'),\n",
+       " ('129', 'sub-part', 'b'),\n",
+       " ('130', 'none', 'none'),\n",
+       " ('131', 'sub-part', 'c'),\n",
+       " ('132', 'none', 'none'),\n",
+       " ('133', 'sub-part', 'd'),\n",
+       " ('134', 'none', 'none'),\n",
+       " ('135', 'part', '2'),\n",
+       " ('136', 'sub-part', 'a'),\n",
+       " ('137', 'none', 'none'),\n",
+       " ('138', 'sub-part', 'b'),\n",
+       " ('139', 'none', 'none'),\n",
+       " ('140', 'part', '3'),\n",
+       " ('141', 'part', '4'),\n",
+       " ('142', 'part', '5'),\n",
+       " ('143', 'none', 'none'),\n",
+       " ('144', 'headline-section', '25'),\n",
+       " ('145', 'none', 'none')]"
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 6
     }
    ],
    "source": [
@@ -268,35 +268,35 @@
     "\n",
     "    if sentence_word_count > 3 and word_tokens[0] == '(' and hasNumbers(word_tokens[1]) and word_tokens[2] == ')':\n",
     "        sentence_type = 'part'\n",
-    "        #print(str(line_index_number) + ' - ' + sentence_type)\n",
-    "        forward_result_to_csv.append((str(line_index_number),sentence_type))\n",
+    "        type_value = word_tokens[1] # part number\n",
+    "        forward_result_to_csv.append((str(line_index_number),sentence_type,type_value))\n",
     "\n",
     "    elif sentence_word_count > 3 and word_tokens[0] == 'Section' and hasNumbers(word_tokens[1]) and word_tokens[2] == '.':\n",
     "        sentence_type = 'headline-section'\n",
-    "        #print(str(line_index_number) + ' - ' + sentence_type)\n",
-    "        forward_result_to_csv.append((str(line_index_number),sentence_type))\n",
+    "        type_value = word_tokens[1] # section number\n",
+    "        forward_result_to_csv.append((str(line_index_number),sentence_type,type_value))\n",
     "\n",
     "    elif sentence_word_count > 2 and word_tokens[1] == ')':\n",
     "        sentence_type = 'sub-part'\n",
-    "        #print(str(line_index_number) + ' - ' + sentence_type)\n",
-    "        forward_result_to_csv.append((str(line_index_number),sentence_type))\n",
+    "        type_value = word_tokens[0] # sub-part character\n",
+    "        forward_result_to_csv.append((str(line_index_number),sentence_type,type_value))\n",
     "\n",
-    "    elif sentence_word_count > 2 and line_index_number == 0:\n",
+    "    elif sentence_word_count > 2 and line_index_number == 0 and hasNumbers(word_tokens[0]):\n",
     "        sentence_type = 'headline-chapter'\n",
-    "        #print(str(line_index_number) + ' - ' + sentence_type)\n",
-    "        forward_result_to_csv.append((str(line_index_number),sentence_type))\n",
+    "        type_value = word_tokens[0] # chapter number\n",
+    "        forward_result_to_csv.append((str(line_index_number),sentence_type,type_value))\n",
     "\n",
     "    else:\n",
     "        sentence_type = 'none'\n",
-    "        #print(str(line_index_number) + ' - ' + sentence_type)\n",
-    "        forward_result_to_csv.append((str(line_index_number),sentence_type))\n",
+    "        type_value = 'none'\n",
+    "        forward_result_to_csv.append((str(line_index_number),sentence_type,type_value))\n",
     "\n",
     "forward_result_to_csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
